<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="245dp"
        style="@style/title_purple" />

    <TextView
        style="@style/title_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:text="@string/hello_world"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="333dp" />

    <RadioButton
        style="@style/title_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ola_radio_button"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="439dp" />

    <CheckBox
        style="@style/title_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ola_checkbox"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="522dp" />
</androidx.constraintlayout.widget.ConstraintLayout>