<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="160dp"
        android:text="@string/imc"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="107dp"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/pesoEDT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:hint="@string/qual_o_seu_peso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <EditText
        android:id="@+id/alturaEDT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pesoEDT"
        android:layout_alignStart="@id/pesoEDT"
        android:layout_alignEnd="@id/pesoEDT"
        android:layout_marginBottom="60dp"
        android:hint="@string/qual_a_sua_altura"
        app:layout_constraintBottom_toTopOf="@+id/pesoEDT"
        app:layout_constraintEnd_toEndOf="@+id/pesoEDT"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pesoEDT"
        tools:visibility="visible" />

    <Button
        android:id="@+id/calcularBTN"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:text="@string/calcular"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>